<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_label">TITLE</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_details_label">DETAILS</string>
    <string name="crime_solved_label">Solved</string>
    <string name="Title">Crime Title</string>
    <string name="Title2">Serious Crime Title!</string>
    <string name="Date">Crime Date</string>
    <string name="Call">Call the police</string>
    <string name="crime_suspect_text">Choose suspect</string>
    <string name="crime_report_text">Send Report</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">CriminalIntent</string>
    <string name="send_report">Send Crime</string>

</resources>